--- a/views/gdms.ejs
+++ b/views/gdms.ejs
@@ -724,7 +724,7 @@
         <!-- ======= SUBMIT ======= -->
         <div class="d-grid">
             <button type="submit" class="btn btn-primary btn-lg">
-                Zatwierdź odpowiedzi i przejdź dalej
+                Zatwierdź odpowiedzi i rozpocznij quiz!
             </button>
         </div>
     </form>
