--- a/views/intro_task1.ejs
+++ b/views/intro_task1.ejs
@@ -67,7 +67,7 @@
 <body>
     <div class="loading-container">
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>
-        <p>Zamawiasz pizzę i finalizujesz zamówienie. Wybrałeś już wszystkie interesujące Cię dodatki. Sfinalizuj płatność.</p>
+        <p>Zamawiasz pizzę i finalizujesz zamówienie. Dokończ płatność.</p>
         
         <form action="/intro_task1" method="POST" id="intro_task1-form">
             <button type="submit" class="submit-btn" id="submit-button">Przejdź do zadania</button>
