--- a/views/intro_task3.ejs
+++ b/views/intro_task3.ejs
@@ -67,8 +67,7 @@
 <body>
     <div class="loading-container">
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>
-        <p>Jesteś w trakcie zakupów usługi streamingowej.
-        Jesteś zainteresowany słuchaniem muzyki, bez ponoszenia dodatkowych opłat. Wybierz odpowiednią opcję.</p>
+        <p>Jesteś w trakcie zakupów usługi streamingowej. Wybierz odpowiednią opcję.</p>
         <form action="/intro_task3" method="POST" id="intro_task3-form">
             <button type="submit"  id="submit-button" class="submit-btn">Przejdź do zadania</button>
         </form>
