--- a/views/intro_task6.ejs
+++ b/views/intro_task6.ejs
@@ -67,7 +67,7 @@
 <body>
     <div class="loading-container">
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>  
-        <p>Jesteś w trakcie zakupu książki, która jest przeznaczona na prezent świąteczny. Nie interesują Cię dodatkowe produkty. Przejdź do płatności.</p>
+        <p>Jesteś w trakcie zakupu książki, która jest przeznaczona na prezent świąteczny. Przejdź do płatności</p>
         <form action="/intro_task6" method="POST" id="intro_task6-form">
             <button type="submit" id="submit-button" class="submit-btn">Przejdź do zadania</button>
         </form>
