--- a/views/intro_task8.ejs
+++ b/views/intro_task8.ejs
@@ -67,8 +67,7 @@
 <body>
     <div class="loading-container">
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>  
-        <p>Jesteś w trakcie zamawiania biletów piłkarskich. Słyszałaś/eś o możliwości kupienia koszulek w pakiecie, 
-            jednak nie jesteś co do tego pomysłu przekonany. Wybierz odpowiednie opcje.</p>
+        <p>Jesteś w trakcie zamawiania biletów piłkarskich. Wybierz odpowiednie opcje</p>
         <form action="/intro_task8" method="POST" id="intro_task8-form">
             <button type="submit" id="submit-button" class="submit-btn">Przejdź do zadania</button>
         </form>
