--- a/views/intro_task5.ejs
+++ b/views/intro_task5.ejs
@@ -67,8 +67,7 @@
 <body>
     <div class="loading-container">
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>
-        <p>Jesteś w trakcie zapisów na zawody sportowe. Wypełniłeś już cały formularz. 
-            Zarejestruj się bez zgadzania się na kontaktowanie się z Tobą.</p>
+        <p>Jesteś w trakcie zapisów na zawody sportowe. Zarejestruj się.</p>
         <form action="/intro_task5" method="POST" id="intro_task5-form">
             <button type="submit" id="submit-button" class="submit-btn">Przejdź do zadania</button>
         </form>
