--- a/views/register.ejs
+++ b/views/register.ejs
@@ -109,8 +109,12 @@
                 </select>
             </div>
 
-
-
+        
+            <div class="text-center mt-4">
+                <a href="/pdf.pdf" class="btn btn-outline-secondary" download>
+                    📄 Pobierz opis zadań
+                </a>
+            </div>
 
             <!-- Przycisk Zarejestruj -->
             <div class="d-grid">
