--- a/views/outro.ejs
+++ b/views/outro.ejs
@@ -102,8 +102,14 @@
 
         <p><strong>Unikający:</strong> Ten styl wiąże się z tendencją do odkładania decyzji lub unikania ich w ogóle, szczególnie w sytuacjach wywołujących stres lub niepewność.</p>
         </div>
-        <p>Dziękujęmy za udział w badaniu! Prosimy o zamknięcie przeglądarki.</p>
+       
     </div>
+</div>
+
+<div class="text-center mt-4">
+    <a href="/pdf.pdf" class="btn btn-outline-secondary" download>
+        📄 Co dokładnie zadziało się w badaniu? Pobierz prezentację!
+    </a>
 </div>
 
 </body>
