--- a/views/outro.ejs
+++ b/views/outro.ejs
@@ -105,7 +105,7 @@
        
 
         <div class="text-center mt-4">
-            <a href="/pdf.pdf" class="btn btn-outline-secondary" download>
+            <a href="/DarkPatterns.pdf" class="btn btn-outline-secondary" download>
                 📄 Co dokładnie zadziało się w badaniu? Pobierz prezentację!
             </a>
         </div>
