--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -69,7 +69,7 @@
         <h1>To już koniec badania!</h1> 
         <h3>Dziękujemy za udział w badaniu! Zaraz zostaniesz przekierowany do swojego wyniku.
             <br>
-            Zanim to nastąpi, prosimy o ocenienie skali podchwytliwości zadań. Jaką trudność w skali od 1 do 10 przysporzyły Ci zadania?
+            Zanim to nastąpi, prosimy o ocenienie skali podchwytliwości zadań. Jaką trudność w skali od 1 ( bardzo łatwe) do 10 (bardzo trudne) przysporzyły Ci zadania?
         </h3>
         
         <form id="feedback-form" action="/feedback" method="POST" style="text-align: center;">
