--- a/views/intro_nudging3.ejs
+++ b/views/intro_nudging3.ejs
@@ -55,7 +55,7 @@
 <body>
     <div class="loading-container">
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>
-        <p>Jesteś w trakcie finalizowania przelewu. Zweryfikowałeś wszystkie dane. Potwierdź wysyłkę środków w aplikacji bankowej.</p>
+        <p>Jesteś w trakcie finalizowania przelewu. Zweryfikowa/łaś wszystkie dane. Potwierdź wysyłkę środków w aplikacji bankowej.</p>
         <form action="/intro_nudging3" method="POST" id="intro_nudging3-form">
             <button type="submit" class="submit-btn" id="submit-button">Przejdź do zadania</button>
         </form>
