--- a/views/task7.ejs
+++ b/views/task7.ejs
@@ -13,7 +13,7 @@
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: Arial, sansfć-serif;
         }
         .task-container {
             text-align: center;
@@ -92,7 +92,7 @@
             <% if (wersja === 'negative') { %>
                 <p class="highlight-red">Na pewno chcesz ryzykować stłuczonym ekranem?</p>
             <% } else { %>
-                <p class="highlight-green">Wybierająć ubezpieczenie, stłuczony ekran Ci nie straszny</p>
+                <p class="highlight-green">Wybierając ubezpieczenie, stłuczony ekran Ci nie straszny!</p>
             <% } %>
             
             <label>
