--- a/views/intro_task4.ejs
+++ b/views/intro_task4.ejs
@@ -69,7 +69,7 @@
   
     <div class="loading-container">
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>
-        <p>Jesteś w trakcie rejestracji. Uzupełniłeś już wszystkie dane osobowe. Dokończ proces rejestracji.</p>
+        <p>Jesteś w trakcie rejestracji. Uzupełniłaś/eś już wszystkie dane osobowe. Dokończ proces rejestracji.</p>
         <form action="/intro_task4" method="POST" id="intro_task4-form">
             <button type="submit" id="submit-button" class="submit-btn">Przejdź do zadania</button>
         </form>
