--- a/views/nudging1.ejs
+++ b/views/nudging1.ejs
@@ -79,11 +79,11 @@
 </head>
 <body>
 
-<% if (completedTasks && completedTasks.includes('nudging1')) { %>
+<!-- <% if (completedTasks && completedTasks.includes('nudging1')) { %>
     <p>To zadanie zostało już ukończone. Prosimy nie cofać kart w przeglądarce. Prosimy o powrót do: 
         <a href="/register">strony rejestracji</a>.
     </p>
-<% } else { %>
+<% } else { %> -->
     <div class="task-container">
         <img src="/logout.png" alt="Ikona wylogowania" width="128" height="128" class="logout-icon">
         <h1 class="mb-4">Wylogowywanie się</h1>
@@ -107,7 +107,7 @@
 
         
     </div>
-<% } %>
+<!-- <% } %> -->
 
 
 
