--- a/views/nudging2.ejs
+++ b/views/nudging2.ejs
@@ -87,11 +87,11 @@
     </style>
 </head>
 <body>
-<% if (completedTasks && completedTasks.includes('nudging2')) { %>
+<!-- <% if (completedTasks && completedTasks.includes('nudging2')) { %>
     <p>Rezerwacja została już zakończona. Prosimy nie cofać stron w przeglądarce. Wróć do: 
         <a href="/register">strony rejestracji</a>.
     </p>
-    <% } else { %>
+    <% } else { %> -->
     <div class="task-container">
         <h1>Potwierdź rezerwację</h1>
         <p>Wybierz jedną z opcji, aby zakończyć proces rezerwacji biletów</p>
@@ -117,7 +117,7 @@
             <div class="progress-bar" id="progress-bar"></div>
         </div>
     </div>
-    <% } %>
+    <!-- <% } %> -->
 
     <script>
         // Pobranie wartości czasu wylosowanego w backendzie
