--- a/views/task7.ejs
+++ b/views/task7.ejs
@@ -67,12 +67,12 @@
 <body>
 
 
-    <% if (completedTasks && completedTasks.includes('task7')) { %>
+    <!-- <% if (completedTasks && completedTasks.includes('task7')) { %>
         <p>To zadanie zostało już ukończone. Prosimy nie cofać kart w przeglądarce. Prosimy o powrót do: 
             <a href="/register">strony rejestracji</a>.
         </p>
       <% } 
-      else { %> 
+      else { %>  -->
     <div class="task-container">
         <h1>Zakupy</h1>
         <img src="/smartphone.png" alt="shop" width="100" height="100" class="smartphone-icon">
@@ -112,7 +112,7 @@
             <div class="progress-bar" id="progress-bar"></div>
         </div>
     </div>
-    <% } %>
+    <!-- <% } %> -->
 
 
 
