--- a/views/task1.ejs
+++ b/views/task1.ejs
@@ -88,12 +88,12 @@
 </head>
 <body>
 
-    <% if (completedTasks && completedTasks.includes('task1')) { %>
+    <!-- <% if (completedTasks && completedTasks.includes('task1')) { %>
         <p>To zadanie zostało już ukończone. Prosimy nie cofać kart w przeglądarce. Prosimy o powrót do: 
             <a href="/register">strony rejestracji</a>.
         </p>
       <% } 
-      else { %>
+      else { %> -->
         <div class="task-container">
             <img src="/pizza.png" alt="pizza" width="100" height="100" class="pizza-icon">
           <h1 class="mb-4">Wybierz najkorzystniejszą dla siebie opcję</h1>
@@ -117,7 +117,7 @@
             <div class="progress-bar" id="progress-bar"></div>
           </div>
         </div>
-      <% } %>
+      <!-- <% } %> -->
 
     
 
