--- a/views/task4.ejs
+++ b/views/task4.ejs
@@ -76,12 +76,12 @@
     </style>
 </head>
 <body>
-    <% if (completedTasks && completedTasks.includes('task4')) { %>
+    <!-- <% if (completedTasks && completedTasks.includes('task4')) { %>
         <p>To zadanie zostało już ukończone. Prosimy nie cofać kart w przeglądarce. Prosimy o powrót do: 
             <a href="/register">strony rejestracji</a>.
         </p>
      <% } 
-     else { %>
+     else { %> -->
     <div class="task-container">
         <img src="/newspaper.png" alt="shop" width="100" height="100" class="newspaper-icon"> 
         <h1>Wybierz najkorzystniejszą dla siebie opcję</h1>
@@ -123,7 +123,7 @@
             <div class="progress-bar" id="progress-bar"></div>
         </div>
     </div>
-    <% } %>
+    <!-- <% } %> -->
 
 
 
