--- a/views/task5.ejs
+++ b/views/task5.ejs
@@ -81,12 +81,12 @@
     </style>
 </head>
 <body>
-    <% if (completedTasks && completedTasks.includes('task5')) { %>
+    <!-- <% if (completedTasks && completedTasks.includes('task5')) { %>
         <p>To zadanie zostało już ukończone. Prosimy nie cofać kart w przeglądarce. Prosimy o powrót do: 
             <a href="/register">strony rejestracji</a>.
         </p>
       <% } 
-      else { %>
+      else { %> -->
     <div class="task-container">
         <img src="/running.png" alt="shop" width="100" height="100" class="running-icon">
         <h1>Dokończ proces rejestracji</h1>
@@ -165,6 +165,6 @@
         });
         
     </script>
-    <% } %>
+    <!-- <% } %> -->
 </body>
 </html>
