--- a/views/task8.ejs
+++ b/views/task8.ejs
@@ -79,11 +79,11 @@
 </head>
 <body>
 
-    <% if (completedTasks && completedTasks.includes('task8')) { %>
+    <!-- <% if (completedTasks && completedTasks.includes('task8')) { %>
         <p>To zadanie zostało już ukończone. Prosimy nie cofać kart w przeglądarce. Prosimy o powrót do: 
             <a href="/register">strony rejestracji</a>.
         </p>
-      <% } else { %>
+      <% } else { %> -->
     <div class="task-container">
 
         <img src="/football.png" alt="Borussia Dortmund" width="100" height="100" class="football-icon">
@@ -119,8 +119,8 @@
             <div class="progress-bar" id="progress-bar"></div>
         </div>
     </div>
-    <% } %>
-
+    <!-- <% } %>
+ -->
     <script>
         const timeoutInput = document.getElementById('timeout');
         window.onpageshow = function(event) {
